--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     @TODO
     1. Check NginX for encoding settings
     2. Change icon to .png
+    3. Double check grammar
 -->
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +16,6 @@
   <link rel="stylesheet" href="./assets/css/style.css" type="text/css" media="all">
   <link rel="stylesheet" href="./assets/css/gumby.css" type="text/css" media="screen">
   <link rel="stylesheet" href="./assets/css/media-queries.css" type="text/css" media="screen">
-  <!-- <link rel="stylesheet" href="./assets/css/elementTransitions.css" type="text/css" media="screen"> -->
-  <!-- <link rel="stylesheet" href="./assets/css/baseline-checker.css" type="text/css" media="screen"> -->
   <link rel="icon" href="./assets/images/cu7ious_avatar.jpg" sizes="32x32">
   <link rel="icon" href="./assets/images/cu7ious_avatar.jpg" sizes="192x192">
   <link rel="apple-touch-icon-precomposed" href="./assets/images/cu7ious_avatar.jpg">
@@ -27,9 +25,6 @@
 <body>
 
   <script>
-    // document.addEventListener('touchmove', function(event) {
-    //   event.preventDefault();
-    // }, false);
     (function() {
       var preloaderHTML = [];
       preloaderHTML.push('<div id="preloader-stage">');
@@ -40,7 +35,6 @@
       preloaderHTML.push('</div></div></div>');
       document.body.insertAdjacentHTML('afterbegin', preloaderHTML.join(''));
     })();
-
   </script>
 
   <div class="container">
@@ -95,10 +89,6 @@
               <div class="slide1"></div>
               <div class="slide2"></div>
               <div class="slide3"></div>
-              <!-- <img src="./assets/images/Cu7ious-at-Golden-Gate-Bridge-wth-Smile.jpg" alt="CU7OUS">
-              <img src="./assets/images/Cu7ious-at-500-Startups-SF.jpg" alt="CU7OUS">
-              <img src="./assets/images/CU7IOUS-digital-nomad.jpg" alt="CU7OUS"> -->
-              <!-- <span class="mask"></span> -->
             </div>
 
             <div class="about-me-lines">
@@ -200,23 +190,7 @@
 
       <div class="line-divider"></div>
 
-      <!-- <div class="row">
-        <div class="container auto-scrolling">
-          <div class="twelve columns">
-            <div class="works get-in-touch">
-              <nav>
-                <ul>
-                  <li><a href="#">Projects</a></li>
-                  <li><a href="#">Experiments</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <section id="works"> -->
-<!-- /// ---- /// -->
+        <!-- Empty HTML for works showcase -->
         <div id="works-container" class="shadow">
           <div id="content-left" class="content-left row">
             <!-- don't forget to add `single-element` class for a single content -->
@@ -230,16 +204,14 @@
             <div id="cont"></div>
             <!-- Content on Mobile View - same as content left ( don't forget the mobile-view class ) -->
             <div class="ten columns centered mobile-view">
-              <!-- <img src="./assets/images/" alt=""> -->
+            <!-- <img src="./assets/images/" alt=""> -->
             </div>
           </div>
         </div>
+        <!-- Empty HTML for works showcase END -->
 
         <div class="row">
-          <!-- <div class="container auto-scrolling"> -->
           <div class="container">
-            <!-- <div class="twelve columns"> -->
-              <!-- <div class="row"> -->
                 <div id="portfolio" class="row">
                   <h2>My Works</h2>
                   <div class="portfolio-row row work-item">
@@ -261,18 +233,6 @@
                           <li>Led the Team of 4 Engineers</li>
                           <a class="work-read-more" href="#">Read More »</a>
                         </ul>
-                        <!-- <div class="tags-block">
-                          <span>Node.js</span>
-                          <span>Feathers.js</span>
-                          <span>MongoDB</span>
-                          <span>React.js</span>
-                          <span>Webpack</span>
-                          <span>Ant.d</span>
-                          <span>Socket.io</span>
-                          <span>Docker</span>
-                          <span>AWS</span>
-                          <span>NginX</span>
-                        </div> -->
                       </article>
                     </div>
                   </div>
@@ -326,49 +286,13 @@
 
     </div>
 
-      <!-- </section> -->
-
-      <!-- <div class="row">
-        <div class="container auto-scrolling">
-          <div class="row">
-            <div class="circles">
-              <div class="three columns">
-                <div class="skill-card">
-                  <div class="circle" id="container1"></div>
-                  <i>Full Stack JavaScript</i>
-                </div>
-              </div>
-              <div class="three columns">
-                <div class="skill-card">
-                  <div class="circle" id="container2"></div>
-                  <i>HTML 5 / CSS 3</i>
-                </div>
-              </div>
-              <div class="three columns">
-                <div class="skill-card">
-                  <div class="circle" id="container3"></div>
-                  <i>UX / UI</i>
-                </div>
-              </div>
-              <div class="three columns">
-                <div class="skill-card">
-                  <div class="circle" id="container4"></div>
-                  <i>WordPress / PHP</i>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div> -->
-
       <div class="row">
         <div class="container auto-scrolling">
           <div class="twelve columns">
             <div class="get-in-touch">
               <h4>Get in touch with me</h4>
               <!-- <p>If you have something interesting for me, don’t be shy to get in touch.
-                <br>I prefer to connect via email.
+                I prefer to connect via email.
               </p> -->
               <a target="_blank" href="//ua.linkedin.com/in/sergiigarkusha">LinkedIn</a>
               <a href="mailto:con&#116;&#97;&#99;t&#64;c&#117;7&#105;o&#46;&#117;&#115;">con&#116;&#97;&#99;t&#64;c&#117;7&#105;o&#46;&#117;&#115;</a>
@@ -379,23 +303,6 @@
       </div>
 
   </div>
-
-  <!-- <div class="the-sea-fo-tech">
-                <div class="sea-background"></div>
-                <div class="sea-foreground"></div>
-            </div> -->
-
-  <!-- </div> -->
-
-  <!-- <div class="my-works-block">
-                <nav class="portfolio-filter">
-                    <ul>
-                        <li>JavaScript.js</li>
-                        <li>React.js</li>
-                        <li>WordPress</li>
-                    </ul>
-                </nav>
-            </div> -->
 
   </div>
 
@@ -424,7 +331,6 @@
 
   <!-- Load scripts -->
   <script type="text/javascript" src="./assets/js/preloader.js"></script>
-  <!-- <script type="text/javascript" src="./assets/js/progressbar.js"></script> -->
   <script type="text/javascript" src="./assets/js/main.js"></script>
   <script>
     (function(i, s, o, g, r, a, m) {
